2005-11-19  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimppaintoptions-gui.c
	* app/tools/gimpselectionoptions.c: code cleanup.

2005-11-19  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpaligntool.c
	* app/tools/gimpcolortool.c
	* app/tools/gimpfliptool.c
	* app/tools/gimpmagnifytool.c
	* app/tools/gimpmovetool.c
	* app/tools/gimptransformtool.c
	* app/tools/gimpvectortool.c: started to get rid of all stock GDK
	cursors in preparation of fixing bug #158407.

2005-11-18  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpgradienteditor.c (view_events):
	* app/widgets/gimpnavigationview.c (gimp_navigation_view_scroll):
	changed wheel scrolling to be HIG-compliant (control zooms). Also
	handle GDK_SCROLL_LEFT/RIGHT correctly and made shift switch the
	scroll axis. The widgets behave as the image window now.

2005-11-18  Jakub Steiner <jimmac@ximian.com>

	* data/palettes/Tango.gpl: Made the greens more vibrant.

2005-11-17  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpgradienteditor.c: implement GtkWidget::unrealize()
	and destroy the control pixmap. fixes crash when moving the dialog
	to another display.

	* menus/dockable-menu.xml.in: added a separator before the
	"Move to Screen" submenu.

2005-11-17  Michael Natterer  <mitch@gimp.org>

	* app/actions/window-actions.[ch]: connect to GdkDisplayManager
	and automatically add/remove move-to-screen actions when
	displays are opened/closed.

	* app/menus/window-menu.c: added similar code here to add/remove
	menu items for the above actions.

	* app/actions/Makefile.am
	* app/actions/window-commands.[ch]: new files containing window
	close and move-to-screen callbacks. There is no need to implement
	these twice for GimpDock and GimpDisplay.

	* app/actions/dock-commands.[ch]
	* app/actions/view-commands.[ch]: remove the callbacks here.

	* app/actions/dock-actions.c
	* app/actions/view-actions.c: changed accordingly.

2005-11-16  Manish Singh  <yosh@gimp.org>
