@@ -1,3 +1,11 @@
+2005-11-21  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/MapObject/mapobject_main.[ch]
+	* plug-ins/MapObject/mapobject_preview.c
+	* plug-ins/MapObject/mapobject_ui.c: must not keep pointers in the
+	struct that is being used to preserve data between invocations of
+	the plug-in. Fixes bug #321932.
+
 2005-11-19  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimppaintoptions-gui.c
